# places-remember

./: Dockerfile  pyproject.toml
.github/workflows/: linter.yml  python-app.yml
placesremember/: Dockerfile  requirements.txt
placesremember/placesremember/: settings.py
