[tool.poetry]
name = "PlacesRemember"
version = "0.1.0"
description = ""
authors = ["Viktor Butovchenko <vbutovchenko@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
social-auth-app-django = "^4.0.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
